--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "version": "0.0.3",
   "keywords": [
     "dom",
-    "event"
+    "event",
+    "mutation",
+    "removal"
   ],
   "dependencies": {
     "within-document": "0.0.3",
     "mutation-observer": "1.0.1"
   },
-  "development": {},
   "component": {
     "scripts": {
       "removed/index.js": "index.js",
@@ -21,5 +22,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/component/removed.git"
-  }
+  },
+  "license": "MIT"
 }
