--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "removed-component",
+  "name": "removed",
   "description": "invoke a callback when a DOM element is removed",
   "version": "0.0.3",
   "keywords": [
